<resources>
    <string name="app_name">피플러스 사장님</string>
    <string name="word_auto_signIn">자동로그인</string>
    <string name="word_signIn">로그인</string>
    <string name="word_log_out">로그아웃</string>
    <string name="word_complete">완료</string>
    <string name="word_signUp">회원가입</string>
    <string name="word_req_auth">인증요청</string>
    <string name="word_confirm">확인</string>
    <string name="word_cancel">취소</string>
    <string name="word_sms_en">SMS</string>
    <string name="word_sms">문자 메세지</string>
    <string name="word_lms">LMS</string>
    <string name="word_id">아이디</string>
    <string name="word_id_en">ID</string>
    <string name="word_pw_en">PW</string>
    <string name="word_password">비밀번호</string>
    <string name="word_certified_number">인증된 번호</string>
    <string name="word_modified">수정</string>
    <string name="word_goods_modified">상품수정</string>
    <string name="word_email">이메일</string>
    <string name="word_current_version">현재 버전</string>
    <string name="word_latest_version">최신 버전</string>
    <string name="word_update">업데이트</string>
    <string name="word_secessionDate">탈퇴 신청 날짜: </string>
    <string name="word_sns_signUp">SNS 계정 회원가입</string>
    <string name="word_contact">연락처</string>
    <string name="word_address">주소</string>
    <string name="word_store_address">매장 주소</string>
    <string name="word_page_address">페이지주소</string>
    <string name="word_detail_address">상세주소</string>
    <string name="word_alarm_container">알림함</string>
    <string name="word_phone_auth">휴대전화번호 인증</string>
    <string name="word_setting">설정</string>
    <string name="word_all">모두</string>
    <string name="word_notice_alert">알림</string>
    <string name="msg_make_prnumber">PR넘버 만들기</string>
    <string name="word_reg">등록</string>
    <string name="word_category">카테고리</string>
    <string name="word_config_group_title">그룹관리</string>
    <string name="word_select">선택</string>
    <string name="word_category_select">카테고리 선택</string>
    <string name="word_change_groupName">그룹명 수정</string>
    <string name="word_delete_group">그룹 삭제</string>
    <string name="word_current_group">현재그룹</string>
    <string name="word_plus_newGroup">+새그룹</string>
    <string name="msg_inquiry">문의하기</string>
    <string name="msg_inquiry_charge">충전 문의하기</string>
    <string name="word_search">검색</string>
    <string name="word_member_leave">회원탈퇴</string>
    <string name="word_select_photo">사진선택</string>
    <string name="word_reply_edit">댓글 수정</string>
    <string name="word_complete_edit">수정완료</string>
    <string name="word_reAuth">재인증</string>
    <string name="word_public">전체공개</string>
    <string name="word_public_contact">주소록에만 공개</string>
    <string name="word_private">비공개</string>
    <string name="word_contents">내용</string>
    <string name="word_notice">공지사항</string>
    <string name="word_faq_en">FAQ</string>
    <string name="word_alarm_set">알림설정</string>
    <string name="word_reg_newGroup">새그룹 등록</string>
    <string name="word_total">전체</string>
    <string name="word_approve">승인</string>
    <string name="word_duplicate">중복확인</string>
    <string name="word_default_picture">기본사진</string>
    <string name="word_detail">자세히 보기</string>
    <string name="word_detail_view">상세보기</string>
    <string name="word_album_name">PAlbum</string>
    <string name="word_location">위치</string>
    <string name="word_fan_open_bounds">\'플러스\'공개</string>
    <string name="word_sync_facebook">페이스북 연동</string>
    <string name="word_facebook">페이스북</string>
    <string name="word_login_facebook">페이스북으로 로그인</string>
    <string name="word_login_google">구글로 로그인</string>
    <string name="word_next">다음</string>
    <string name="word_delete">삭제</string>
    <string name="word_goods_delete">상품 삭제</string>
    <string name="word_total_delete">전체삭제</string>
    <string name="word_total_agree">전체동의</string>
    <string name="word_share_page">MY샵 공유</string>
    <string name="word_share_post">소식 공유</string>
    <string name="msg_share_post">소식 공유하기</string>
    <string name="word_first_category">1차카테고리</string>
    <string name="word_second_category">2차카테고리</string>
    <string name="word_plus">플러스</string>
    <string name="word_group_name">그룹명</string>
    <string name="word_image_edit">사진편집</string>
    <string name="word_add">추가</string>
    <string name="word_plus_add_image">+사진추가</string>
    <string name="word_plus_add">+추가</string>
    <string name="word_write_post">글쓰기</string>
    <string name="word_config_account">계정관리</string>
    <string name="word_setting_discount">할인율설정</string>
    <string name="msg_input_id">아이디를 입력해주세요.</string>
    <string name="msg_input_over4">아이디를 4자리이상 입력해주세요.</string>
    <string name="msg_input_password">비밀번호를 입력해주세요.</string>
    <string name="msg_find_id">아이디찾기</string>
    <string name="msg_find_password">비밀번호찾기</string>
    <string name="msg_confirm_id">아이디를\n확인해주세요</string>
    <string name="msg_input_searchWord">검색어를 입력해주세요.</string>
    <string name="msg_change">변경하기</string>
    <string name="msg_latest_version">최신 버전 입니다.</string>
    <string name="msg_account_disabled_secession">계정 비활성화 및 탈퇴</string>
    <string name="msg_waiting_secession">회원탈퇴 대기 상태 입니다.</string>
    <string name="msg_secession_description1">- 14일간의 탈퇴 대기 기간 후, 탈퇴가 완료됩니다.</string>
    <string name="msg_secession_description2">- 14일 기간내 재 로그인시 탈퇴 취소를 할 수 있습니다.</string>
    <string name="msg_agree_terms">약관을 동의해 주세요.</string>
    <string name="msg_input_change_groupName">변경하실 그룹명을 입력해 주세요.</string>
    <string name="msg_change_groupName">변경 그룹명</string>
    <string name="msg_group_config_description">그룹의 순서를 변경하시려면 원하는 그룹을 길게 누르고 위, 아래로 움직여 보세요.</string>
    <string name="msg_no_group">관리할 그룹이 없습니다.</string>
    <string name="msg_question_logout">로그아웃 하시겠습니까?</string>
    <string name="msg_account_leave_attention">계정 비활성화 및 삭제시 주의사항</string>
    <string name="msg_account_leave_caution">유의사항(필독사항)</string>
    <string name="msg_account_leave_method">회원 탈퇴 진행 방법</string>
    <string name="msg_account_leave_standby">회원 탈퇴 대기기간</string>
    <string name="msg_enable_use">사용 가능합니다.</string>
    <string name="msg_do_not_attach_broken_image">손상된 이미지는 첨부할수 없습니다.</string>
    <string name="msg_input_contents">홍보하실 내용을 입력해주세요.</string>
    <string name="msg_input_verificationNumber">인증번호를 입력해주세요.</string>
    <string name="msg_request_mobile_verification">휴대폰 인증요청 작업을 해주세요.</string>
    <string name="msg_request_verification">인증요청 작업을 해주세요.</string>
    <string name="msg_input_email_id">이메일 아이디를 입력해주세요.</string>
    <string name="msg_input_new_password">새로운 비밀번호를 입력해주세요.</string>
    <string name="msg_not_verified2">SMS 인증 단계를 완료해야\nPRNumber서비스를 이용할 수 있습니다.</string>
    <string name="msg_request_sms">SMS 인증이 요청 되었습니다.</string>
    <string name="msg_requested_verification">인증이 요청 되었습니다.</string>
    <string name="msg_failed_login">로그인을 실패하였습니다.\n아이디 비밀번호를 다시 확인해주세요.</string>
    <string name="msg_changed_password_in_login">비빌번호가 변경되었습니다.</string>
    <string name="msg_changed_password">비빌번호가 변경되었습니다.\n변경하신 비밀번호로\n로그인을 해주세요.</string>
    <string name="msg_alim_storage">각 메세지 항목은 좌측 방향으로 밀어서 삭제 가능합니다</string>
    <string name="msg_input_groupName">그룹명을 입력 해주세요.</string>
    <string name="msg_major_update">PRNumber 서비스에 새로운 기능이 추가되었습니다.\n업데이트를 진행해 주세요.</string>
    <string name="msg_minor_update">새로운 버전이 업데이트 되었습니다.\n업데이트 하시겠습니까?</string>
    <string name="msg_contact_loading">데이타 최적화 중입니다.\n잠시만 기다려주세요</string>
    <string name="msg_alim_popup">피플러스 만의 유익하고 재미있는 이벤트 소식들을 알림으로 받아 보시겠습니까?</string>
    <string name="msg_valid_email">올바른 형식의 이메일 아이디를 입력해주세요.</string>
    <string name="msg_check_duplication_id">아이디 중복체크를 해주세요.</string>
    <string name="msg_password_focus">새 비밀번호 입력</string>
    <string name="msg_delete_complete">삭제되었습니다.</string>
    <string name="msg_select_first_category">1차 카테고리를 선택해주세요.</string>
    <string name="msg_close_signUp">회원가입 중단 시 입력한 모든 정보를\n다시 작성해야합니다.</string>
    <string name="msg_disconnected_network">네트워크에 연결되어 있지 않습니다.</string>
    <string name="msg_check_network_status">네트워크 연결 상태 확인 후,\n다시 시도해주세요.</string>
    <string name="msg_input_wireNumber">유선번호를 입력해주세요.</string>
    <string name="msg_input_wireNumber_over">유선번호는 7자리 이상부터 생성 가능합니다.</string>
    <string name="msg_input_free_number">자유번호를 입력해주세요.</string>
    <string name="msg_input_free_number_over">자유번호는 6자리 이상부터 생성 가능합니다.</string>
    <string name="msg_select_other_category">2차 카테고리 내용이 존재하지 않습니다.\n다른 카테고리를 선택해주세요.</string>
    <string name="msg_do_not_look_again">다시보지 않기</string>
    <string name="msg_add_key_word_warning">키워드는 5개 까지 등록가능합니다.</string>
    <string name="msg_input_keyword_over_2">키워드를 2자 이상 입력해주세요</string>
    <string name="msg_input_keyword">등록하실 키워드를 입력해주세요</string>
    <string name="msg_already_registed_keyword">이미 등록되있는 키워드 입니다.</string>
    <string name="msg_do_replay">답글달기</string>
    <string name="msg_disable_emoticon">이모티콘은 첨부할 수 없습니다.</string>
    <string name="msg_setting">설정하기</string>
    <string name="msg_location_error1">일시적 내 위치를 확인할 수 없습니다.</string>
    <string name="msg_location_error2">사용기기의 \'위치정보\' 사용설정을\n확인해주시기바랍니다.</string>
    <string name="msg_location_error3">* 높은 정확성을 위해 GPS, 이동통신망을\n사용한 위치추적을 선택해주세요.</string>
    <string name="msg_not_exist_prnumber">PR넘버가 없습니다.</string>
    <string name="msg_grant_permission">권한 승인하기</string>
    <string name="word_keyword_reg">검색키워드 등록</string>
    <string name="word_keyword_setting">키워드 설정</string>
    <string name="word_keyword_config">키워드 관리</string>
    <string name="word_keyword_config_desc">신규고객 타겟 광고</string>
    <string name="msg_input_mobile_number">휴대폰번호를 입력해주세요</string>
    <string name="word_verification_number">인증번호</string>
    <string name="word_cs_center">고객센터</string>
    <string name="msg_view_sale_goods_sample">선결제 상품판매 서비스 샘플 보기</string>
    <string name="msg_apply_sale_goods">선결제 상품판매 서비스 신청하기</string>
    <string name="msg_sale_goods_title1">피플러스에서 제공하는</string>
    <string name="msg_sale_goods_title2">쉽고 편리한 선결제 상품판매 서비스</string>
    <string name="msg_sale_goods_description1">1.실시간 선결제 상품판매</string>
    <string name="msg_sale_goods_description1_1">선결제 할인 상품을 등록하여 신규고객에게 판매할 수 있어요</string>
    <string name="msg_sale_goods_description2">2.쉽고 편리한 상품등록</string>
    <string name="msg_sale_goods_description2_1">복잡한 절차없이 쉽고 편리하게 선결제 상품을 등록할 수 있어요</string>
    <string name="msg_sale_goods_description3">3.실시간 판매내역 관리</string>
    <string name="msg_sale_goods_description3_1">판매된 내역을 실시간으로 확인할 수 있어요</string>
    <string name="msg_sale_goods_description4">4.국내 최저 판매수수료</string>
    <string name="msg_sale_goods_description4_1">저렴한 판매수수료를 통해 부담없이 상품을 등록하고 판매할 수 있어요</string>
    <string name="msg_sale_goods_description5">5.일/주/월별 판매통계</string>
    <string name="msg_sale_goods_description5_1">판매통계를 통해 구매패턴을 확인하고 효율적으로 팡품을 판매할 수 있어요</string>
    <string name="msg_question_forget_id">아이디를\n잊으셨나요?</string>
    <string name="msg_forget_id_description">아이디를 찾기 위해 휴대폰 인증을 해주세요.</string>
    <string name="word_verification_mobile_number">휴대폰 인증</string>
    <string name="msg_input_verification_number">인증번호를 입력해주세요</string>
    <string name="word_verification_confirm">인증확인</string>
    <string name="msg_change_password">비밀번호를\n변경해 주세요</string>
    <string name="word_company_number">사업자등록번호</string>
    <string name="word_online_sale_number">통신판매업신고번호</string>
    <string name="msg_pplus_desc">주식회사 피플러스는 통신판매 중개자로서 통신판매의 당사자가 아니며 상품주문, 구매 및 환불등과 관련한 의무와 책임은 각 판매자에게 있습니다.</string>
    <string name="word_pplus_company_info">주식회사 피플러스 사업자 정보</string>
    <string name="word_pplus_company">주식회사 피플러스</string>
    <string name="word_pplus_ceo">대표이사 김건수</string>
    <string name="word_pplus_address">서울 특별시 서초구 반포대로 28길 20</string>
    <string name="word_pplus_company_number">264-81-22169</string>
    <string name="word_pplus_email">cs@p-ple.com</string>
    <string name="word_pplus_online_sale_number">2017-서울서초-1102</string>
    <string name="word_pplus_cs">02-6381-1234\n(전화상담 평일 10:00~18:30)</string>
</resources>